Second release, fixed header, changed font, text spacing improvements

--- a/source/stylesheets/_breakpoints.scss
+++ b/source/stylesheets/_breakpoints.scss
@@ -1,10 +1,10 @@
 @mixin breakpoint($class) {
   @if $class == xxs {
-    @media (max-width: 400px) { @content; }
+    @media (min-width: 400px) { @content; }
   }
 
   @if $class == xs {
-    @media (max-width: 600px) { @content; }
+    @media (min-width: 600px) { @content; }
   }
 
   @else if $class == sm {
